--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,9 @@ spring.datasource.username=sa
 spring.datasource.password=Pa$$w0rd
 spring.datasource.driver-class-name =com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
-spring.mail.host=smtp.campus-eni.fr
-spring.mail.port=587
-spring.mail.username=rick.bouyaghi2023@campus-eni.fr
-spring.mail.password=Adwin290304!
+spring.mail.host=smtp
+spring.mail.port=25
+spring.mail.username=setusername
+spring.mail.password=setpassword
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-logging.level.org.springframework.mail=DEBUG
