--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,11 @@ spring.datasource.username=sa
 spring.datasource.password=Pa$$w0rd
 spring.datasource.driver-class-name =com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
-spring.mail.host=smtp
-spring.mail.port=25
-spring.mail.username=setusername
-spring.mail.password=setpassword
+
+spring.jpa.show-sql=true
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=entreprise.pro29@gmail.com
+spring.mail.password=rrjq yfdn ovja niir
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
