--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.mail.username=entreprise.pro29@gmail.com
 spring.mail.password=rrjq yfdn ovja niir
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
